--- a/css/apps.css
+++ b/css/apps.css
@@ -25,25 +25,41 @@
         }
         .logo{
           margin-top: 5%;
+          
         }
         
         .logo,.name_logo{
             display: flex;
-            flex-direction: row;
-            justify-content:space-evenly;   
+            /* flex-direction: row; */
+            justify-content:space-evenly;  
+            
         }
+        
         .logo>img{
-          width: 50px;
+          /* width: 50px; */
           height: 50px;
+         
+          border: 1px solid rgb(240, 238, 238);
+          border-radius: 50%;
+          padding: 1%;
+          margin-bottom: 1%;
+          box-shadow: grey;
         }
+        .logo > img:hover{
+          /* border: 1px solid green; */
+          transform: translateY(-20px);
+          cursor: pointer;
+        }
+
         .name_logo>h5{
           margin-top: -5%;
             margin-bottom: 5%;
             padding-left: 20px ;
         }
+        
         .img_1st>img{
             width: 90%;
-            margin-bottom: 0;
+            
         }
         /* transform :start */
     #transform{
