--- a/css/login.css
+++ b/css/login.css
@@ -60,7 +60,7 @@ font-family: 'Poppins', sans-serif;
 }
 label,input,::placeholder{
 display: block;
-color: #adb4eb
+color: #989cbf
 
 }
 
@@ -117,6 +117,9 @@ margin:auto;
 height: 25px;
 padding: 3px;
 
+}
+#sign-in-up > div:nth-child(2) > a{
+  color: black;
 }
 #sign-up a:hover{
 color:rgb(7, 205, 185);
